Fixed top margin spacing when navigation panel is toggled open

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -63,6 +63,7 @@
   
   .nav {
     position: fixed;
+    margin-top: 0;
     top: 0;
     left: 0;
     width: 250px;
